--- a/controlMeli.html
+++ b/controlMeli.html
@@ -159,11 +159,21 @@
                 
                 <!-- Contenedor para alertas -->
                 <div id="alertContainer" class="mt-3"></div>
-                <!-- aca debe mostrar el div con la alerta -->
+                
+                <!-- Contadores de filas en un contenedor dividido -->
+                <div class="contador-container2">
+                    <div class="contador2" id="contadorPreparados">
+                        <span id="totalPreparados">0</span> Preparados <i class="bi bi-check2-circle"></i>
+                    </div>
+                    <div class="contador2" id="contadorSinPreparar">
+                        <span id="totalSinPreparar">0</span> Sin Preparar <i class="bi bi-clock-history"></i>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
+
 
 <!-- Contenedor para notificaciones -->
 <div id="notificationContainer" style="position: fixed; bottom: 20px; right: 20px; z-index: 9999;"></div>
