--- a/controlMeli.html
+++ b/controlMeli.html
@@ -131,6 +131,14 @@
                     <div class="spinner-border" role="status" id="spinner4">
                         <span class="sr-only">Cargando...</span>
                     </div>
+                    <div class="mac-container">
+                        <div class="mac-buttons hidden">
+                            <div class="button red"></div>
+                            <div class="button yellow"></div>
+                            <div class="button green"></div>
+                        </div>
+                    </div>
+                    <p class="lookBase hidden"></p>                    
                 </div>
             </div>
         </div>
