--- a/bna.html
+++ b/bna.html
@@ -18,6 +18,22 @@
     <link rel="shortcut icon" href="./Img/caja.png">
     <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300..700&display=swap" rel="stylesheet">  
 </head>
+
+<script>
+    // Verificación de sesión
+    function checkLogin() {
+        const savedTimestamp = localStorage.getItem('loginTimestamp');
+        const isExpired = !savedTimestamp || (Date.now() - savedTimestamp) > 3600000; // 1 hora
+
+        if (isExpired) {
+            window.location.href = 'logiPaq.html'; // Redirige al login si la sesión ha expirado
+        }
+    }
+
+    // Ejecutar la verificación al cargar la página
+    checkLogin();
+</script>
+
 <body class="envios-body">
     
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
