--- a/controlMeli.html
+++ b/controlMeli.html
@@ -29,6 +29,22 @@
     
 
 </head>
+
+<script>
+    // Verificación de sesión
+    function checkLogin() {
+        const savedTimestamp = localStorage.getItem('loginTimestamp');
+        const isExpired = !savedTimestamp || (Date.now() - savedTimestamp) > 3600000; // 1 hora
+
+        if (isExpired) {
+            window.location.href = 'logiPaq.html'; // Redirige al login si la sesión ha expirado
+        }
+    }
+
+    // Ejecutar la verificación al cargar la página
+    checkLogin();
+</script>
+
 <body class="envios-body">
     
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
