--- a/facturacionMl.html
+++ b/facturacionMl.html
@@ -41,7 +41,7 @@
         const isExpired = !savedTimestamp || (Date.now() - savedTimestamp) > 3600000; // 1 hora
 
         if (isExpired) {
-            window.location.href = 'logiPaq.html'; // Redirige al login si la sesión ha expirado
+            window.location.href = 'logipaq.html'; // Redirige al login si la sesión ha expirado
         }
     }
 
