--- a/logipaq.html
+++ b/logipaq.html
@@ -11,6 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="./Img/caja.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <style>
         body {
@@ -43,6 +44,36 @@
             display: flex;
             align-items: center;
         }
+        .input-group {
+            border: none;
+            position: relative;
+            height: 46px;
+            border-radius: 5px;
+        }
+        .eye-toggle {
+            border: 1px cornflowerblue solid;
+            height: 46px;
+            background-color: #ffffff; 
+            border-radius: 5px; 
+            padding: 6px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: background-color 0.3s, transform 0.2s;
+        }
+        .eye-toggle:hover {
+            background-color: cornflowerblue;
+        }
+        .eye-toggle i {
+            color: #007bff; 
+            font-size: 1.2rem;
+        }
+        .eye-toggle i:hover {
+            color: white; 
+        }
+        .form-control {
+            padding-right: 40px; 
+        }
     </style>
 </head>
 <body>
@@ -53,7 +84,12 @@
                 <input type="text" id="username" class="form-control" placeholder="Usuario" required>
             </div>
             <div class="mb-3">
-                <input type="password" id="password" class="form-control" placeholder="Contraseña" required>
+                <div class="input-group">
+                    <input type="password" id="password" class="form-control" placeholder="Contraseña" required>
+                    <span class="eye-toggle" id="togglePassword">
+                        <i class="fas fa-eye" id="eyeIcon"></i>
+                    </span>
+                </div>
             </div>
             <button type="submit" id="loginButton" class="btn btn-primary w-100">
                 <div class="spinner-container2">
@@ -156,6 +192,21 @@
                     buttonText.textContent = 'Error de conexión';
                 });
             }, 3000);
+        });
+
+        // Mostrar/Ocultar la contraseña
+        const togglePassword = document.getElementById('togglePassword');
+        const passwordInput = document.getElementById('password');
+        const eyeIcon = document.getElementById('eyeIcon');
+
+        togglePassword.addEventListener('click', () => {
+            // Alternar el tipo de input
+            const type = passwordInput.getAttribute('type') === 'password' ? 'text' : 'password';
+            passwordInput.setAttribute('type', type);
+            
+            // Alternar el ícono del ojo
+            eyeIcon.classList.toggle('fa-eye');
+            eyeIcon.classList.toggle('fa-eye-slash');
         });
     </script>
 </body>
