--- a/logipaq.html
+++ b/logipaq.html
@@ -63,10 +63,12 @@
         }
         .eye-toggle:hover {
             background-color: cornflowerblue;
+            cursor: pointer;
         }
         .eye-toggle i {
             color: #007bff; 
             font-size: 1.2rem;
+            cursor: pointer;
         }
         .eye-toggle i:hover {
             color: white; 
