--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="container">
         <a class="navbar-brand" href="#">
             <img src="./Img/Novogar N.png" alt="Logo" class="navbar-logo">
-            <span class="navbar-brand-text">Logi<span class="navbar-brand-text2">Paq</span> <img class="blackCat" src="./Img/LogisticaNovogar.png" alt="BlackCat" srcset=""> </span>
+            <span class="navbar-brand-text">Logi<span class="navbar-brand-text2">Paq</span> <img class="blackCat" src="./Img/ruta-unscreen.gif" alt="LogiPaq" srcset=""> </span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
