--- a/logipaq.html
+++ b/logipaq.html
@@ -87,7 +87,7 @@
             </div>
             <div class="mb-3">
                 <div class="input-group">
-                    <input type="password" id="password" class="form-control" placeholder="Contraseña" required>
+                    <input type="password" id="password" class="form-control" placeholder="Contraseña" required autocomplete="current-password">
                     <span class="eye-toggle" id="togglePassword">
                         <i class="fas fa-eye" id="eyeIcon"></i>
                     </span>
