--- a/envios.html
+++ b/envios.html
@@ -206,7 +206,7 @@
         border: crimson solid 1px;
     }
 </style>
-
+<!-- Fin Modal de Envío de Email -->
 
     <footer class="center">
         <img class="logo-foot" src="./Img/Novogar N.png" alt="Logo Novogar">
