--- a/envios.html
+++ b/envios.html
@@ -154,6 +154,8 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-primary" id="botonEnviarEmail">Enviar Email</button>
+                <button id="reclamarButton">Reclamar</button>
+
             </div>
         </div>
     </div>
