--- a/envios.html
+++ b/envios.html
@@ -136,7 +136,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="destinatario" class="form-label">Destinatario</label>
-                        <input type="email" class="form-control input-email" id="destinatario" value="lucasponzoni@gmail.com" readonly>
+                        <input type="email" class="form-control input-email" id="destinatario" value="ecommerce@andesmarhelp.zendesk.com" readonly>
                     </div>
                     <div class="mb-3">
                         <label for="origen" class="form-label">Origen</label>
