--- a/index.html
+++ b/index.html
@@ -254,12 +254,12 @@
             <div class="cotizacion-container">
                 <span class="signo-peso"><img src="./Img/dollar.webp" alt="Dollar Sign"></span>
                 <span class="valor-cotizacion" id="valor-cotizacion">0</span>
-                <div class="cotizacion-label">ANDREANI</div>
+                <div class="cotizacion-label">ANDREANI (Api)</div>
             </div>
             <div class="cotizacion-container">
                 <span class="signo-peso"><img src="./Img/dollar.webp" alt="Dollar Sign"></span>
                 <span class="valor-cotizacion" id="valor-cotizacion2">0</span>
-                <div class="cotizacion-label">ANDESMAR</div>
+                <div class="cotizacion-label">ANDESMAR (Api)</div>
             </div>
         </div>
         
@@ -385,12 +385,12 @@
     <script src="./js/formulario-andesmar.js"></script>
     <script src="./js/cotizadorAndreani.js" defer></script>
     <script src="./js/bultos.js"></script>
-    <script src="./js/cotizadorAndesmar.js"></script>
     <script src="./js/localidades.js"></script>
     <script src="./js/trucks.js"></script>
     <script src="./js/script.js"></script>
     <script src="./js/andreani.js"></script>
     <script src="./js/features.js"></script>
+    <script src="./js/cotizadorAndesmarApi.js"></script>
 
     <!-- SweetAlert JS -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
