--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         </div>
 
         <div class="grid-container">
-            <h2 class="titulo-cotizacion">*Precios finales con IVA</h2>
+            <h2 class="titulo-cotizacion">*Precios finales con IVA (Cotizados directo por Api)</h2>
             <div class="cotizacion-container">
                 <span class="signo-peso"><img src="./Img/dollar.webp" alt="Dollar Sign"></span>
                 <span class="valor-cotizacion" id="valor-cotizacion">0</span>
