--- a/controlMeli.html
+++ b/controlMeli.html
@@ -157,13 +157,13 @@
                         <span class="sr-only">Cargando...</span>
                     </div>
                     <div class="mac-container">
-                        <div class="mac-buttons hidden">
+                        <div class="mac-buttons">
                             <div class="button red"></div>
                             <div class="button yellow"></div>
                             <div class="button green"></div>
                         </div>
                     </div>
-                    <p class="lookBase hidden"></p>                    
+                    <p class="lookBase">Comencemos a escanear!</p>                    
                 </div>
             </div>
         </div>
