--- a/controlMeli.html
+++ b/controlMeli.html
@@ -109,6 +109,11 @@
             <h2 class="counter" id="totalCantidad"><i class="bi bi-box-seam-fill"></i> Total Unidades: 0</h2>
         <h2 class="counter counterfila" id="totalFila"><i class="bi bi-bookmark-check-fill"></i> Total Etiquetas: 0</h2>
         </div>
+
+        <div id="temporizadorMensaje" style="display: none; position: relative; background-color: #ffffff; padding: 10px; border: 1px solid #007bff; border-radius: 10px; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);">
+            <i class="bi bi-clock" style="color: #007bff;"></i> 
+            Descargar etiquetas en <span id="temporizador" style="color: #ff0000; font-weight: 800;">10</span> segundos.
+        </div>                           
         
         <div class="table-responsive"> <!-- Contenedor para hacer la tabla responsive -->
             <table class="table table-bordered">
