--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
     <script src="./js/script.js"></script>
     <script src="./js/andreani.js"></script>
     <script src="./js/features.js"></script>
-    <script src="./js/cotizadorAndesmarApi.js"></script>
+    <script src="./js/cotizadorAndesmar.js"></script>
 
     <!-- SweetAlert JS -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
