--- a/oca.html
+++ b/oca.html
@@ -4,6 +4,75 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cotizar Envío</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        body {
+            background-color: #f8f9fa;
+        }
+        h1, h2 {
+            color: #343a40;
+        }
+        .form-control {
+            border-radius: 0.5rem;
+        }
+        .btn {
+            border-radius: 0.5rem;
+        }
+        #respuesta {
+            background-color: #ffffff;
+            border: 1px solid #ced4da;
+            border-radius: 0.5rem;
+            padding: 15px;
+            margin-top: 15px;
+            white-space: pre-wrap; /* Para mantener el formato */
+        }
+        .precio {
+            font-weight: bold;
+            color: #28a745; /* Color verde para el total */
+        }
+    </style>
+</head>
+<body class="container mt-5">
+    <h1 class="text-center">Cotizar Envío OCA</h1>
+    <form onsubmit="event.preventDefault(); enviarDatos();" class="mt-4">
+        <div class="form-group">
+            <label for="cuit">CUIT:</label>
+            <input type="text" class="form-control" id="cuit" value="30-68543701-1" required>
+        </div>
+        <div class="form-group">
+            <label for="operativa">Operativa:</label>
+            <input type="number" class="form-control" id="operativa" value="431395" required>
+        </div>
+        <div class="form-group">
+            <label for="pesoTotal">Peso Total (kg):</label>
+            <input type="number" class="form-control" id="pesoTotal" step="0.01" value="1" required>
+        </div>
+        <div class="form-group">
+            <label for="volumenTotal">Volumen Total (m³):</label>
+            <input type="number" class="form-control" id="volumenTotal" step="0.01" value="0.03" required>
+        </div>
+        <div class="form-group">
+            <label for="codigoPostalOrigen">Código Postal Origen:</label>
+            <input type="number" class="form-control" id="codigoPostalOrigen" value="2000" required>
+        </div>
+        <div class="form-group">
+            <label for="codigoPostalDestino">Código Postal Destino:</label>
+            <input type="number" class="form-control" id="codigoPostalDestino" value="5000" required>
+        </div>
+        <div class="form-group">
+            <label for="cantidadPaquetes">Cantidad de Paquetes:</label>
+            <input type="number" class="form-control" id="cantidadPaquetes" value="1" required>
+        </div>
+        <div class="form-group">
+            <label for="valorDeclarado">Valor Declarado:</label>
+            <input type="number" class="form-control" id="valorDeclarado" value="65999" required>
+        </div>
+        <button type="submit" class="btn btn-primary btn-block">Enviar</button>
+    </form>
+
+    <h2>Respuesta:</h2>
+    <pre id="respuesta"></pre>
+
     <script>
         async function enviarDatos() {
             const cuit = document.getElementById('cuit').value;
@@ -15,23 +84,14 @@
             const cantidadPaquetes = document.getElementById('cantidadPaquetes').value;
             const valorDeclarado = document.getElementById('valorDeclarado').value;
 
+            const url = `https://proxy.cors.sh/http://webservice.oca.com.ar/ePak_tracking/Oep_TrackEPak.asmx/Tarifar_Envio_Corporativo?PesoTotal=${pesoTotal}&VolumenTotal=${volumenTotal}&CodigoPostalOrigen=${codigoPostalOrigen}&CodigoPostalDestino=${codigoPostalDestino}&CantidadPaquetes=${cantidadPaquetes}&ValorDeclarado=${valorDeclarado}&Cuit=${cuit}&Operativa=${operativa}`;
+
             try {
-                const response = await fetch('https://proxy.cors.sh/http://webservice.oca.com.ar/ePak_Tracking_TEST/Oep_TrackEPak.asmx/Tarifar_Envio_Corporativo', {
-                    method: 'POST',
+                const response = await fetch(url, {
+                    method: 'GET',
                     headers: {
-                        'Content-Type': 'application/json',
                         'x-cors-api-key': 'live_36d58f4c13cb7d838833506e8f6450623bf2605859ac089fa008cfeddd29d8dd',
-                    },
-                    body: JSON.stringify({
-                        Cuit: cuit,
-                        Operativa: operativa,
-                        PesoTotal: pesoTotal,
-                        VolumenTotal: volumenTotal,
-                        CodigoPostalOrigen: codigoPostalOrigen,
-                        CodigoPostalDestino: codigoPostalDestino,
-                        CantidadPaquetes: cantidadPaquetes,
-                        ValorDeclarado: valorDeclarado
-                    })
+                    }
                 });
 
                 if (!response.ok) {
@@ -39,45 +99,39 @@
                     throw new Error(`Error: ${response.status} - ${errorText}`);
                 }
 
-                const data = await response.json();
-                document.getElementById('respuesta').innerText = JSON.stringify(data, null, 2);
+                const text = await response.text(); // Obtener la respuesta como texto
+                const parser = new DOMParser(); // Crear un parser para convertir el texto a XML
+                const xmlDoc = parser.parseFromString(text, "application/xml"); // Parsear el texto a XML
+
+                // Extraer la información deseada
+                const tables = xmlDoc.getElementsByTagName('Table');
+                let resultado = '';
+
+                for (let i = 0; i < tables.length; i++) {
+                    const tarifador = tables[i].getElementsByTagName('Tarifador')[0]?.textContent || 'N/A';
+                    const precio = tables[i].getElementsByTagName('Precio')[0]?.textContent || 'N/A';
+                    const idTiposervicio = tables[i].getElementsByTagName('idTiposervicio')[0]?.textContent || 'N/A';
+                    const ambito = tables[i].getElementsByTagName('Ambito')[0]?.textContent || 'N/A';
+                    const plazoEntrega = tables[i].getElementsByTagName('PlazoEntrega')[0]?.textContent || 'N/A';
+                    const adicional = tables[i].getElementsByTagName('Adicional')[0]?.textContent || 'N/A';
+                    const total = tables[i].getElementsByTagName('Total')[0]?.textContent || 'N/A';
+
+                    // Formatear el total en pesos argentinos
+                    const totalFormateado = new Intl.NumberFormat('es-AR', { style: 'currency', currency: 'ARS' }).format(total);
+
+                    resultado += `Tarifador: ${tarifador}, Precio: ${precio}, ID Servicio: ${idTiposervicio}, Ámbito: ${ambito}, Plazo Entrega: ${plazoEntrega}, Adicional: ${adicional}, Total: ${totalFormateado}\n`;
+                }
+
+                document.getElementById('respuesta').innerText = resultado || 'No se encontraron resultados.';
+
             } catch (error) {
                 document.getElementById('respuesta').innerText = `Error: ${error.message}`;
             }
         }
     </script>
-</head>
-<body>
-    <h1>Cotizar Envío</h1>
-    <form onsubmit="event.preventDefault(); enviarDatos();">
-        <label for="cuit">CUIT:</label>
-        <input type="text" id="cuit" value="30-53625919-4" required><br><br>
 
-        <label for="operativa">Operativa:</label>
-        <input type="number" id="operativa" value="64665" required><br><br>
-
-        <label for="pesoTotal">Peso Total (kg):</label>
-        <input type="number" id="pesoTotal" step="0.01" value="1" required><br><br>
-
-        <label for="volumenTotal">Volumen Total (m³):</label>
-        <input type="number" id="volumenTotal" step="0.01" value="0.5" required><br><br>
-
-        <label for="codigoPostalOrigen">Código Postal Origen:</label>
-        <input type="number" id="codigoPostalOrigen" value="2000" required><br><br>
-
-        <label for="codigoPostalDestino">Código Postal Destino:</label>
-        <input type="number" id="codigoPostalDestino" value="5000" required><br><br>
-
-        <label for="cantidadPaquetes">Cantidad de Paquetes:</label>
-        <input type="number" id="cantidadPaquetes" value="1" required><br><br>
-
-        <label for="valorDeclarado">Valor Declarado:</label>
-        <input type="number" id="valorDeclarado" value="65999" required><br><br>
-
-        <button type="submit">Enviar</button>
-    </form>
-
-    <h2>Respuesta:</h2>
-    <pre id="respuesta"></pre>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
