--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     <div class="volumen-container">
                         <img src="./Img/m3.png" alt="m3">
                         <div>
-                            <div class="volumen-label">Volumen Total <span class="cubic">(m³):</span></div>
+                            <div class="volumen-label">Volumen <span class="cubic">(m³):</span></div>
                             <span id="volumenTotal">0.00</span>
                         </div>
                     </div>
@@ -223,7 +223,7 @@
                     <div class="volumen-container">
                         <img src="./Img/cm3.png" alt="cm3">
                         <div>
-                            <div class="volumen-label">Volumen Total <span class="cubic">(cm³):</span></div>
+                            <div class="volumen-label">Volumen <span class="cubic">(cm³):</span></div>
                             <span id="volumenTotalcm">0.00</span>
                         </div>
                     </div>
