--- a/index.html
+++ b/index.html
@@ -267,13 +267,13 @@
     <div class="cotizacion-container andreani">
         <div class="icono-transporte"><img src="./Img/andreani-tini.png" alt="Correo ANdreani" srcset=""></div>
         <span class="valor-cotizacion" id="valor-cotizacion">0</span>
-        <div class="cotizacion-label"></div>
+        <div class="cotizacion-label"><img class="imgParcel" src="./Img/andreani-mini.png" alt="Andreani" srcset=""></div>
     </div>
     
     <div class="cotizacion-container andesmar">
         <div class="icono-transporte"><img src="./Img/andesmar-tini.png" alt="Andesmar Cargas" srcset=""></div>
         <span class="valor-cotizacion" id="valor-cotizacion2">0</span>
-        <div class="cotizacion-label"></div>
+        <div class="cotizacion-label"><img class="imgParcel" src="./Img/andesmar-mini.png" alt="Andesmar" srcset=""></div>
     </div>
     
     <div class="cotizacion-container tercer-transporte">
