--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
         </div>
     </div>
     
-    <div style="display: flex; gap: 10px;">
+    <div class="doble-tel-remito" style="display: flex; gap: 10px;">
         <input type="number" id="telefonoDestinatario" name="TelefonoDestinatario" value="" required placeholder="Teléfono Destinatario">
         <input type="text" id="nroRemito" name="NroRemito" value="" required placeholder="REMITO ej: 23012345678R">
     </div>
 
-    <label for="observaciones">Observaciones:</label>
+    <label class="label-mensaje-personalizado" for="observaciones">Observaciones:</label>
     <textarea id="observaciones" lass="mensaje-personalizado" name="Observaciones"></textarea>
     <div id="mensajePersonalizado" class="mensaje-personalizado"></div>
 
