--- a/meliAr.html
+++ b/meliAr.html
@@ -95,7 +95,7 @@
                                             <button type="button" class="btn btn-warning" id="calendario-log-propia" data-toggle="modal" data-target="#logisticaModal">
                                                 <i class="bi bi-calendar-fill"></i> Calendario
                                             </button>
-                                            
+
                                         </div>
                                         
                                         <!-- Modal Calendario -->
@@ -134,8 +134,12 @@
                                                         </div>
                                                         <div id="calendar" class="mc-os-calendar"></div>
                                                         <div class="d-flex justify-content-between mt-3">
-                                                            <button class="btn btn-secondary mc-os-btn" id="prev-month">Atrás</button>
-                                                            <button class="btn btn-secondary mc-os-btn" id="next-month">Adelante</button>
+                                                                                                                        <button class="btn btn-secondary mc-os-btn d-flex align-items-center" id="prev-month">
+                                                                <i class="bi bi-chevron-left me-1"></i> Atrás
+                                                            </button>
+                                                            <button class="btn btn-secondary mc-os-btn d-flex align-items-center" id="next-month">
+                                                                Adelante <i class="bi bi-chevron-right ms-1"></i>
+                                                            </button>
                                                         </div>
                                                     </div>
                                                 </div>
