--- a/imei.html
+++ b/imei.html
@@ -14,14 +14,14 @@
     <script>
         // Configuración de Firebase
         const firebaseConfig = {
-            apiKey: "AIzaSyBIXlgOct2UzkrZbZYbyHu6_NbLDzTqqig",
-            authDomain: "despachos-novogar.firebaseapp.com",
-            databaseURL: "https://despachos-novogar-default-rtdb.firebaseio.com",
-            projectId: "despachos-novogar",
-            storageBucket: "despachos-novogar.firebasestorage.app",
-            messagingSenderId: "346020771441",
-            appId: "1:346020771441:web:c4a29c0db4200352080dd0",
-            measurementId: "G-64DDP7D6Q2"
+  apiKey: "AIzaSyCMu2vPvNzhv0cM3b4RItmqZybRhhR_HJM",
+  authDomain: "despachos-meli-novogar.firebaseapp.com",
+  databaseURL: "https://despachos-meli-novogar-default-rtdb.firebaseio.com",
+  projectId: "despachos-meli-novogar",
+  storageBucket: "despachos-meli-novogar.appspot.com",
+  messagingSenderId: "774252628334",
+  appId: "1:774252628334:web:623aa84bc3b1cebd3f997f",
+  measurementId: "G-E0E9K4TEDW"
         };
 
         // Inicializar Firebase
@@ -153,7 +153,7 @@
         // Función para agregar SKU como nodos en Firebase
         function agregarSKUs() {
             skus.forEach(sku => {
-                const newRef = database.ref('imei/' + sku.replace(/\s+/g, '_')); // Reemplaza espacios en blanco si los hay
+                const newRef = database.ref('LogBsAs/' + sku.replace(/\s+/g, '_')); // Reemplaza espacios en blanco si los hay
                 newRef.set({ sku: sku })
                     .then(() => {
                         console.log(`SKU agregado: ${sku}`);
